--- a/index.html
+++ b/index.html
@@ -20,5 +20,6 @@
       <button class="rst" onclick="reset()">Reset</button>
     </div>
     <small>Created by ALAQUOKE</small>
+    <script src="counter.js"></script>
    </body>
   </html>
